--- a/practice/mcp_server.ipynb
+++ b/practice/mcp_server.ipynb
@@ -249,21 +249,21 @@
     "    - URL : https://openapi.naver.com/v1/search/errata.json\n",
     "    - 파라미터\n",
     "      - query : string\n",
-    "  - [블로그 검색](https://developers.naver.com/docs/serviceapi/search/blog/blog.md#%EB%B8%94%EB%A1%9C%EA%B7%B8)\n",
+    "  - [뉴스 검색](https://developers.naver.com/docs/serviceapi/search/news/news.md#%EB%89%B4%EC%8A%A4)\n",
     "    - Method : GET\n",
-    "    - URL : https://openapi.naver.com/v1/search/blog.json\n",
+    "    - URL : https://openapi.naver.com/v1/search/news.json\n",
     "    - 파라미터\n",
     "      - query : string\n",
-    "      - display : Integer (**10** ~ 100)\n",
-    "      - start : Integer (**1** ~ 1000)\n",
+    "      - display : Integer (**10**, 최대 100)\n",
+    "      - start : Integer (**1**, 최대 1000)\n",
     "      - sort : String (**sim(정확도 순 내림착순)**, date(날짜 순 내림차순))\n",
     "  - [지역](https://developers.naver.com/docs/serviceapi/search/local/local.md#%EC%A7%80%EC%97%AD)\n",
     "    - Method : GET\n",
     "    - URL : https://openapi.naver.com/v1/search/local.json\n",
     "    - 파라미터\n",
     "      - query : string\n",
-    "      - display : Integer (**1** ~ 5)\n",
-    "      - start : Integer (**1** ~ 1)\n",
+    "      - display : Integer (**1**, 최대 5)\n",
+    "      - start : Integer (**1**, 최대 1)\n",
     "      - sort : String (**random(정확도 순 내림착순)**, comment(리뷰 개수 순 내림차순))\n"
    ]
   },
