--- a/practice/mcp_server.ipynb
+++ b/practice/mcp_server.ipynb
@@ -35,7 +35,8 @@
     "\n",
     "# 의존성 추가 : MCP 의존성 추가\n",
     "uv add \"mcp[cli]\"\n",
-    "--\n",
+    "\n",
+    "--uv add (ex)\n",
     "# Specify a version constraint\n",
     "uv add 'requests==2.31.0'\n",
     "\n",
