update naver api (async -> sync)

--- a/practice/mcp_server.ipynb
+++ b/practice/mcp_server.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,18 +281,18 @@
     "\n",
     "BASE_URL = \"https://openapi.naver.com/v1\"\n",
     "API_HEADERS = {\n",
-    "    \"X-Naver-Client-Id\": \"NAVER_CLIENT_ID\",\n",
-    "    \"X-Naver-Client-Secret\": \"NAVER_CLIENT_SECRET\"\n",
+    "    \"X-Naver-Client-Id\": \"TicyBjz0wGyXMakTIQu_\",\n",
+    "    \"X-Naver-Client-Secret\": \"knwrbOG4sX\"\n",
     "}\n",
     "\n",
-    "async def search_local(\n",
+    "def search_local(\n",
     "    query:str,\n",
     "    display:int = 5,\n",
     "    start:int = 1,\n",
     "    sort:str = \"random\"\n",
     "):\n",
-    "    async with httpx.AsyncClient() as client:\n",
-    "        response = await client.get(f'{BASE_URL}/search/local.json',\n",
+    "    with httpx.Client() as client:\n",
+    "        response = client.get(f'{BASE_URL}/search/local.json',\n",
     "                                    params={\n",
     "                                        \"query\":query,\n",
     "                                        \"display\":display,\n",
@@ -306,13 +306,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'lastBuildDate': 'Sun, 30 Mar 2025 17:04:30 +0900',\n",
+       "{'lastBuildDate': 'Mon, 31 Mar 2025 10:33:48 +0900',\n",
        " 'total': 5,\n",
        " 'start': 1,\n",
        " 'display': 5,\n",
@@ -363,13 +363,13 @@
        "   'mapy': '351162354'}]}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "json.loads(await search_local(\"부산역 맛집\"))"
+    "json.loads(search_local(\"부산역 맛집\"))"
    ]
   }
  ],
